// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User profile manage controls test (is a contact) Basic render test 1`] = `
<div
  className="contact profile-manage-controls"
>
  <a
    className="nti-button flyout-trigger message message-button-flyout flyout-closed button primary"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    tabIndex={0}
  >
    <span>
      <div
        className="icon"
      />
      <span
        className="text"
      >
        Message
      </span>
    </span>
  </a>
  <a
    className="nti-button unfollow button primary"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="content"
    >
      <i
        className="icon-unfollow"
      />
      <span>
        Unfollow
      </span>
    </div>
  </a>
</div>
`;

exports[`User profile manage controls test (is not a contact) Basic render test 1`] = `
<div
  className="non-contact profile-manage-controls"
>
  <a
    className="nti-button follow button primary"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="content"
    >
      <i
        className="icon-addfriend"
      />
      <span>
        Follow
      </span>
    </div>
  </a>
</div>
`;
